--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,8 @@ about_content: | # this will include new lines to allow paragraphs
    
   I have 27 years of professional experience in Software Engineering and Developer Relations, mainly as a Software Architect, Software Engineer, and Developer Advocate.
    
+  I focus on developing new code samples, hands-on labs (Oracle LiveLabs), workshops, demos, content (blog posts, videos) highlighting developer tooling and various Java-related and Open-Source projects, and participation in technical conferences and meetups.
+  
   I’m an expert in Java language, JDK, and JVMs (Java Virtual Machines). I have extensive experience and knowledge in Cloud Computing (Oracle OCI, Azure, GCP, IBM Cloud, and AWS), DevOps, Infrastructure as Code (IaC), Continuous Integration / Delivery (CI/CD), and Cloud Native. Besides, experience with Blockchain, including Hyperledger Fabric, Quorum and Ethereum, and Mobile Platforms.
   
   I’m a polyglot programmer with experience in Java, Kotlin, Golang, Python, C, C++, and Javascript, and lately, I’ve been learning Rust.
