--- a/_config.yml
+++ b/_config.yml
@@ -152,7 +152,7 @@ content:
       - [Java Certification - Section 2 - Flow Control](https://www.slideshare.net/juarezjunior/section-2-flow-control) 
       - [Java Certification - Section 1 - Declaration, Initialization and Scoping](https://www.slideshare.net/juarezjunior/section-1-declarations-initialization-and-scoping) 
       - [Java Certification - Intro OCA and OCP 6 & 7 + OO Basics](https://www.slideshare.net/juarezjunior/intro-ocaocp-6-7-oo-basics)       
-      - [Powerlogic - jCompany Java EE Open-Source](https://www.slideshare.net/juarezjunior/scaling-up-java-applications-on-windows)
+      - [Powerlogic - jCompany Java EE Open-Source](https://www.slideshare.net/juarezjunior/powerlogic-java-ee-opensource)
       - [Unisys - Scaling Up Java Applications on Windows Server](https://www.slideshare.net/juarezjunior/scaling-up-java-applications-on-windows))
       - [Synos Technologies - EJB 3](https://www.slideshare.net/juarezjunior/java-ee-com-ejb-3)
       - [1 - Android - Devices and Platform ](https://www.slideshare.net/juarezjunior/1-android-devices-and-platform-enus)
@@ -262,8 +262,7 @@ content:
       - [IBM - Cloud IaaS - Aquisição Softlayer](https://www.flickr.com/photos/15201803@N00/29706180462/in/dateposted-public/)
       - [IBM - Security - Essentials of Secure Engineering](https://www.flickr.com/photos/15201803@N00/29706180542/in/dateposted-public/)
       - [IBM - Security - Creating Secure Software](https://www.flickr.com/photos/15201803@N00/29706180612/in/dateposted-public/)
-      - [IBM - Lean Process Framework](https://www.flickr.com/photos/15201803@N00/29706180812/in/dateposted-public/)
-      - [Overview of CMMi and Standardization](https://www.flickr.com/photos/15201803@N00/29706180932/in/dateposted-public/)
+      - [IBM - Lean Process Framework](https://www.flickr.com/photos/15201803@N00/29706180812/in/dateposted-public/)      
       - [IBM - Redbooks Peer Author Review - Creating your Mobile Business with IBM Worklight](https://www.flickr.com/photos/15201803@N00/29706181122/in/dateposted-public/)
       - [IBM - HIPAA Overview - Health Insurance Portability and Accountability Act](https://www.flickr.com/photos/15201803@N00/29193017743/in/dateposted-public/)
       - [IBM - HIPAA Compliance Program](https://www.flickr.com/photos/15201803@N00/34236642083/in/dateposted-public/)
@@ -282,16 +281,16 @@ content:
       - [IBM - Establishing your Brand](https://www.flickr.com/photos/15201803@N00/34236642333/in/dateposted-public/)
       - [IBM - Technical Talent Outthink - Enabling Meaningful Work](https://www.flickr.com/photos/15201803@N00/29706180412/in/dateposted-public/)
       - [IBM - DataPower V5.0 Security Appliance - Administration](https://www.flickr.com/photos/15201803@N00/29705845402/in/album-72157632977371930/)
-      - [USP - University of Sao Paulo - Introduction to Wearable Devices](https://www.flickr.com/photos/15201803@N00/50936210727/in/album-72157632977371930/)
       - [USP - University of Sao Paulo - IoT Lab - Arduino](https://www.flickr.com/photos/15201803@N00/50936095201/in/album-72157632977371930/)
-      - [USP - University of Sao Paulo - IoT Lab - Raspberry Pi](https://www.flickr.com/photos/15201803@N00/50936210802/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - IoT Lab - Raspberry Pi](https://www.flickr.com/photos/15201803@N00/50936210802/in/album-72157632977371930/)      
+      - [USP - University of Sao Paulo - Bulding IoT applications with Agile](https://www.flickr.com/photos/15201803@N00/52658841908/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - Introduction to Wearable Devices](https://www.flickr.com/photos/15201803@N00/50936210727/in/album-72157632977371930/)      
       - [USP - University of Sao Paulo - Cloud for IoT](https://www.flickr.com/photos/15201803@N00/50936210727/in/album-72157632977371930/)
       - [USP - University of Sao Paulo - Agile Development - DevOps with Git](https://www.flickr.com/photos/15201803@N00/50935410908/in/album-72157632977371930/)
       - [USP - University of Sao Paulo - Agile Development - Docker Containers](https://www.flickr.com/photos/15201803@N00/51039509976/in/album-72157632977371930/)
       - [USP - University of Sao Paulo - Android - Jetpack and Architecture](https://www.flickr.com/photos/15201803@N00/50936210762/in/album-72157632977371930/)
       - [USP - University of Sao Paulo - Android - Labs](https://www.flickr.com/photos/15201803@N00/51192176425/in/album-72157632977371930/)
-      - [USP - University of Sao Paulo - Intelligence of Things Week - Data Science for Natural Sciences](https://www.flickr.com/photos/15201803@N00/50935410963/in/album-72157632977371930/)
-      - [USP - University of Sao Paulo - Industry 4.0 - Fundamentals](https://www.flickr.com/photos/15201803@N00/50935410983/in/album-72157632977371930/)
+      - [USP - University of Sao Paulo - Intelligence of Things Week - Data Science for Natural Sciences](https://www.flickr.com/photos/15201803@N00/50935410963/in/album-72157632977371930/)      
       - [USP - University of Sao Paulo - Blockchain - Introduction](https://www.flickr.com/photos/15201803@N00/50935410838/in/album-72157632977371930/)
       - [USP - University of Sao Paulo - Blockchain - Ethereum Development Tools](https://www.flickr.com/photos/15201803@N00/50936210707/in/album-72157632977371930/)
       - [USP - University of Sao Paulo - Python Language - Part 1](https://www.flickr.com/photos/15201803@N00/50962341911/in/album-72157632977371930/)
@@ -299,11 +298,22 @@ content:
       - [USP - University of Sao Paulo - Python Language - Part 3](https://www.flickr.com/photos/15201803@N00/50984880893/in/album-72157632977371930/)
       - [USP - University of Sao Paulo - React JS - Part 1](https://www.flickr.com/photos/15201803@N00/51006715741/in/album-72157632977371930/)
       - [USP - University of Sao Paulo - ReactJS - Part 2](https://www.flickr.com/photos/15201803@N00/50972753417/in/album-72157632977371930/)
+      - [UFMG - Federal University of Minas Gerais - Modern Software Engineering](https://www.flickr.com/photos/15201803@N00/51672621016/in/album-72157632977371930/)
+      - [UFMG - Federal University of Minas Gerais - Engenharia de Software Moderna - pt-BR(https://www.flickr.com/photos/15201803@N00/51673487990/in/album-72157632977371930/)
+      - [Samsung - Industry 4.0 - Fundamentals](https://www.flickr.com/photos/15201803@N00/50935410983/in/album-72157632977371930/)
+      - [Samsung - Introduction to XR](https://www.flickr.com/photos/15201803@N00/52441782333/in/album-72157632977371930/)
+      - [Samsung - Business Value Proposition](https://www.flickr.com/photos/15201803@N00/52441782338/in/album-72157632977371930/)
+      - [Samsung - Entrepreneurship - Business Model](https://www.flickr.com/photos/15201803@N00/52440756862/in/album-72157632977371930/)
+      - [Samsung - Design Thinking and Product Market Fit](https://www.flickr.com/photos/15201803@N00/52441262081/in/album-72157632977371930/)
+      - [Samsung - Data and Artificial Intelligence Workshop](https://www.flickr.com/photos/15201803@N00/52441533704/in/album-72157632977371930/)      
       - [DevOps JS Conference 2021](https://www.flickr.com/photos/15201803@N00/51114245666/in/dateposted-public/)
       - [Terraform Training](https://www.flickr.com/photos/15201803@N00/40491238343/in/album-72157632977371930/) 
       - [Microsoft OpenHack - DevOps](https://www.credly.com/badges/63ce96f3-9a31-47b6-bbe0-4f8bfe1f6ff3)
       - [Microsoft OpenHack - IoT Operations Gateway](https://www.credly.com/badges/6d4af926-08bf-409a-aa9a-54f0653070b9)
       - [Microsoft OpenHack - Modern Data Warehousing](https://www.credly.com/badges/f27c83fb-1f1a-4d2f-a8c6-9326eb6ca87d)  
+      - [Overview of CMMi and Standardization](https://www.flickr.com/photos/15201803@N00/29706180932/in/dateposted-public/)
+      - [jCompany Developer Suite](https://www.flickr.com/photos/15201803@N00/52441527294/in/album-72157632977371930/)
+      - [Oracle PL/SQL - Basics](https://www.flickr.com/photos/15201803@N00/52440750487/in/album-72157632977371930/)
 
   - title: Talks
     layout: text
