--- a/_config.yml
+++ b/_config.yml
@@ -242,15 +242,12 @@ content:
       - [Certified Java Associate](https://www.flickr.com/photos/15201803@N00/8550741244/in/dateposted-public/) 
       - [Certified Java Web Component 1.4](https://www.flickr.com/photos/15201803@N00/8549640949/in/dateposted-public/) 
       - [Certified Java Business Component Developer - EJB 3.x](https://www.flickr.com/photos/15201803@N00/8549639667/in/dateposted-public/)
+      - [IBM Certified Websphere Network Deployment (ND) Administrator - V8.0](https://www.flickr.com/photos/15201803@N00/8549641167/in/dateposted-public/) 
       - [Java Instructor - Fundamentals, Advanced and JSP (Java Server Pages)](https://juarezjunior.medium.com/whats-a-developer-advocate-845e6bfdd53d)
       - [JBoss Middleware Placement Exam](https://www.flickr.com/photos/15201803@N00/8549640709/in/dateposted-public/) 
       - [JBoss Performance Tunning](https://www.flickr.com/photos/15201803@N00/8549644725/in/album-72157632977371930/)
-      - [IBM Certified Websphere Network Deployment (ND) Administrator - V8.0](https://www.flickr.com/photos/15201803@N00/8549641167/in/dateposted-public/) 
+      - [Java TTT (Train the Trainer) - SAP Netweaver Java EE Application Server](https://www.flickr.com/photos/15201803@N00/8550744626/in/dateposted-public/)       
       - [DFJUG Marathon for Java - M4J with Daniel de Oliveira](https://www.flickr.com/photos/15201803@N00/8550742598/in/dateposted-public/)
-      - [Java TTT (Train the Trainer) - SAP Netweaver Java EE Application Server](https://www.flickr.com/photos/15201803@N00/8550744626/in/dateposted-public/) 
-      - [Accelerated Javascript ES6 Training - IBM & Udemy](https://www.flickr.com/photos/15201803@N00/35047465795/in/dateposted-public/) 
-      - [Javascript ES6 - The Basics - IBM & Udemy](https://www.flickr.com/photos/15201803@N00/34236642463/in/dateposted-public/) 
-      - [Javascript ES6 - The Complete Developer's Guide Course - IBM &Udemy](https://www.flickr.com/photos/15201803@N00/34236642403/in/dateposted-public/)
       - [IBM - AI - Fun with Machine Learning](https://www.flickr.com/photos/15201803@N00/34236642303/in/dateposted-public/) 
       - [IBM - Enabling Digital Transformation with Microservices - A Customer-experience Driven Approach](https://www.flickr.com/photos/15201803@N00/34236642523/in/dateposted-public/) 
       - [IBM - Competing Against AWS and Azure](https://www.flickr.com/photos/15201803@N00/34236642633/in/dateposted-public/)
@@ -300,12 +297,17 @@ content:
       - [USP - University of Sao Paulo - ReactJS - Part 2](https://www.flickr.com/photos/15201803@N00/50972753417/in/album-72157632977371930/)
       - [UFMG - Federal University of Minas Gerais - Modern Software Engineering](https://www.flickr.com/photos/15201803@N00/51672621016/in/album-72157632977371930/)
       - [UFMG - Federal University of Minas Gerais - Engenharia de Software Moderna - pt-BR(https://www.flickr.com/photos/15201803@N00/51673487990/in/album-72157632977371930/)
+      - [UFMG - Federal University of Minas Gerais - Java Programming](https://www.flickr.com/photos/15201803@N00/51672619486/in/album-72157632977371930/)
+      - [UFLA - Federal University of Lavras - Minas Gerais - Java Programming](https://www.flickr.com/photos/15201803@N00/51671816177/in/album-72157632977371930/)
       - [Samsung - Industry 4.0 - Fundamentals](https://www.flickr.com/photos/15201803@N00/50935410983/in/album-72157632977371930/)
       - [Samsung - Introduction to XR](https://www.flickr.com/photos/15201803@N00/52441782333/in/album-72157632977371930/)
       - [Samsung - Business Value Proposition](https://www.flickr.com/photos/15201803@N00/52441782338/in/album-72157632977371930/)
       - [Samsung - Entrepreneurship - Business Model](https://www.flickr.com/photos/15201803@N00/52440756862/in/album-72157632977371930/)
       - [Samsung - Design Thinking and Product Market Fit](https://www.flickr.com/photos/15201803@N00/52441262081/in/album-72157632977371930/)
       - [Samsung - Data and Artificial Intelligence Workshop](https://www.flickr.com/photos/15201803@N00/52441533704/in/album-72157632977371930/)      
+      - [Accelerated Javascript ES6 Training - IBM & Udemy](https://www.flickr.com/photos/15201803@N00/35047465795/in/dateposted-public/) 
+      - [Javascript ES6 - The Basics - IBM & Udemy](https://www.flickr.com/photos/15201803@N00/34236642463/in/dateposted-public/) 
+      - [Javascript ES6 - The Complete Developer's Guide Course - IBM &Udemy](https://www.flickr.com/photos/15201803@N00/34236642403/in/dateposted-public/)
       - [DevOps JS Conference 2021](https://www.flickr.com/photos/15201803@N00/51114245666/in/dateposted-public/)
       - [Terraform Training](https://www.flickr.com/photos/15201803@N00/40491238343/in/album-72157632977371930/) 
       - [Microsoft OpenHack - DevOps](https://www.credly.com/badges/63ce96f3-9a31-47b6-bbe0-4f8bfe1f6ff3)
