--- a/_config.yml
+++ b/_config.yml
@@ -296,7 +296,7 @@ content:
       - [USP - University of Sao Paulo - React JS - Part 1](https://www.flickr.com/photos/15201803@N00/51006715741/in/album-72157632977371930/)
       - [USP - University of Sao Paulo - ReactJS - Part 2](https://www.flickr.com/photos/15201803@N00/50972753417/in/album-72157632977371930/)
       - [UFMG - Federal University of Minas Gerais - Modern Software Engineering](https://www.flickr.com/photos/15201803@N00/51672621016/in/album-72157632977371930/)
-      - [UFMG - Federal University of Minas Gerais - Engenharia de Software Moderna - pt-BR(https://www.flickr.com/photos/15201803@N00/51673487990/in/album-72157632977371930/)
+      - [UFMG - Federal University of Minas Gerais - Engenharia de Software Moderna](https://www.flickr.com/photos/15201803@N00/51673487990/in/album-72157632977371930/)
       - [UFMG - Federal University of Minas Gerais - Java Programming](https://www.flickr.com/photos/15201803@N00/51672619486/in/album-72157632977371930/)
       - [UFLA - Federal University of Lavras - Minas Gerais - Java Programming](https://www.flickr.com/photos/15201803@N00/51671816177/in/album-72157632977371930/)
       - [Samsung - Industry 4.0 - Fundamentals](https://www.flickr.com/photos/15201803@N00/50935410983/in/album-72157632977371930/)
