--- a/_config.yml
+++ b/_config.yml
@@ -243,7 +243,7 @@ content:
       - [Certified Java Web Component 1.4](https://www.flickr.com/photos/15201803@N00/8549640949/in/dateposted-public/) 
       - [Certified Java Business Component Developer - EJB 3.x](https://www.flickr.com/photos/15201803@N00/8549639667/in/dateposted-public/)
       - [IBM Certified Websphere Network Deployment (ND) Administrator - V8.0](https://www.flickr.com/photos/15201803@N00/8549641167/in/dateposted-public/) 
-      - [Java Instructor - Fundamentals, Advanced and JSP (Java Server Pages)](https://juarezjunior.medium.com/whats-a-developer-advocate-845e6bfdd53d)
+      - [Java Instructor - Fundamentals, Advanced and JSP (Java Server Pages)](https://www.flickr.com/photos/15201803@N00/8550745820/in/album-72157632977371930/)
       - [JBoss Middleware Placement Exam](https://www.flickr.com/photos/15201803@N00/8549640709/in/dateposted-public/) 
       - [JBoss Performance Tunning](https://www.flickr.com/photos/15201803@N00/8549644725/in/album-72157632977371930/)
       - [Java TTT (Train the Trainer) - SAP Netweaver Java EE Application Server](https://www.flickr.com/photos/15201803@N00/8550744626/in/dateposted-public/)       
