--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ about_content: | # this will include new lines to allow paragraphs
 
   I've acted as a Mentor for Microsoft for Startups. IBM has nominated me as an IBM Technical Rock Star for Cloud, IBM Redbooks Thought Leader, Technical Evangelist for IBM Mobile, and Nokia Developer Champion. I have received many awards - IBM Manager Choice Award, Superior Community Service Contributions - Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development, Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency - Outstanding Contributor.
 
-  Feel free to invite me to speak about Java, Oracle Autonomous Database,  Microservices, Software Architecture, Solutions Architecture, Oracle Cloud Infrastructure (OCI) with Microsoft Azure, and Emerging Technologies (IoT, AI, Blockchain, XR).
+  Feel free to invite me to speak about Java, Oracle Autonomous Database,  Microservices, Software Architecture, Solutions Architecture, Oracle Cloud Infrastructure (OCI) with Microsoft Azure, Emerging Technologies (IoT, AI, Blockchain, XR), and Cybersecurity.
 
 content:
     
