--- a/_config.yml
+++ b/_config.yml
@@ -341,16 +341,16 @@ content:
       - []()
       - []()
       - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
+      - [Azure User Group Sweden - Multi-cloud Application Development with Microsoft Azure and Oracle Cloud Infrastructure](https://twitter.com/AzugSweden/status/1632360722284806148)
+      - [Tech Day Pakistan 2023](http://techdaypakistan.com/Speakers.html)
+      - [DWX 23 Germany - Revolutionize Java Database App Development with Reactive Streams and Java Virtual Threads](https://www.developer-week.de/history/programm-2023/#/talk/revolutionize-java-database-app-development-with-reactive-streams-and-java-virtual-threads)
+      - [DWX 23 Germany - A High-Speed Data Ingestion Solution in Java Using MQTT, AMQP, and STOMP](https://www.developer-week.de/history/programm-2023/#/talk/a-high-speed-data-ingestion-solution-in-java-using-mqtt-amqp-and-stomp)
+      - [DWX 23 - Developer Week in Nürnberg](https://www.linkedin.com/feed/update/urn:li:activity:7035273841752858624/)
+      - [SOUG.ch Day Winterthur 2023 - Multi-cloud AppDev for Java Developers with Microsoft Azure and Oracle Cloud Infrastructure](https://soug.ch/wp-content/uploads/2023/03/Stream-1-1.pdf)
+      - [Cloud Lunch and Learn - Multi-cloud Application Development with Microsoft Azure and Oracle Cloud Infrastructure](https://www.youtube.com/watch?v=ShHfQNLTsPQ)
+      - [Java Devs ‘23](https://twitter.com/oracleace/status/1625495083759067136)
+      - [SBA Research - Cybersecurity Panel - Secure Software Design, Security Automation, Cloud Security](https://www.sba-research.org/events/remote-breakout-session-secure-software-design-security-automation-cloud-security/)
+      - [JSNation.com - Workshops](https://live.jsnation.com/workshops)
       - [DevRel - Sessionize](https://sessionize.com/juarezjunior)
       - [DevRel - Presentations](https://www.slideshare.net/juarezjunior/presentations)
       - [DevRel - Photos](https://www.flickr.com/photos/15201803@N00/page1) 
@@ -364,10 +364,10 @@ content:
       - [Microsoft Loves NodeConf Remote 2021](https://www.nearform.com/blog/microsoft-loves-nodeconf-remote-2021/)
       - [Microsoft Loves NodeConf Remote 2021 - TW](https://twitter.com/NodeConfRemote/status/1449377589752176646)
       - [Workshop - Static Web Apps with CICD on Azure - GitNation Test.js Summit ](https://portal.gitnation.org/contents/static-web-apps-demo-cicd-deployment-and-test-pipeline-on-azure)
-      - [BRIFW - Brazil Immersive Fashion Week - Blockchain 101](https://brifw.com/festival-2021/)      
+      - [BRIFW - Brazil Immersive Fashion Week - UOL.com.br - pt-BR](https://ffw.uol.com.br/noticias/moda/confira-a-programacao-completa-da-brazil-immersive-fashion-week/)      
       - [BRIFW - Brazil Immersive Fashion Week - Immersive Talk - Blockchain 101](https://twitter.com/juarezjunior/status/1452949631097257987)  
       - [BRIFW - Brazil Immersive Fashion Week - Blockchain 101 - pt-BR](https://www.youtube.com/watch?v=R3lOlyB8vA0)      
-      - [Microsoft Ignite 2021 - Get to know the dev communities and partners in Ireland](https://myignite.microsoft.com/sessions/15fe5d38-2fb1-488c-8e9d-371e5ada2180?source=sessions)
+      - [Microsoft Ignite 2021 - Get to know the dev communities and partners in Ireland](https://learn.microsoft.com/en-us/events/ignite-nov-2021/general/connection-zone/conlc113/)
       - [Microsoft Ignite 2021 - Get to know the dev communities and partners in Ireland - YT](https://www.youtube.com/watch?v=r7wmz4-RXM0)            
       - [Blockchain on Azure for Developers](https://mktoevents.com/Microsoft+Event/272492/157-GQE-382)             
       - [Microsoft Webinar: Machine Learning at scale with Microsoft and Kainos](https://mktoevents.com/Microsoft+Event/304788/157-GQE-382)
