--- a/_config.yml
+++ b/_config.yml
@@ -89,6 +89,7 @@ content:
       - [Microsoft - Onboarding Buddy Gold](https://www.credly.com/badges/67feae69-f442-4266-a44b-9728514fa49d) 
       - [IBM Mobile Thought Leader and Technical Evangelist](https://www.flickr.com/photos/15201803@N00/albums/72157697188449462)
       - [IBM Redbooks Author - Securing Your Mobile Business with IBM Worklight](https://play.google.com/store/books/details/Securing_Your_Mobile_Business_with_IBM_Worklight?id=qXvJAgAAQBAJ&gl=US)   
+      - [IBM Redbook - Securing Your Mobile Business with IBM Worklight](https://books.google.ie/books?id=qXvJAgAAQBAJ)
       - [Irish Government Blockchain Hackathon](https://www.youtube.com/watch?v=MRTzLKNPq14)      
       - [IBM Technical Rock Star for IBM Cloud](https://www.flickr.com/photos/15201803@N00/29191132794/in/photostream/)
       - [IBM Technical RockStar for IBM Cloud - FY 2016 x 4 times](https://www.flickr.com/photos/15201803@N00/34916035751/in/dateposted-public/)
@@ -226,7 +227,7 @@ content:
       - [Oracle Blockchain Cloud Service — Chaincode Deployment and Instantiation](https://juarezjunior.medium.com/oracle-blockchain-cloud-service-chaincode-deployment-and-instantiation-748a5772a59e)
       - [Oracle Blockchain Cloud Service — Invoke Chaincode by means of OBCS REST APIs](https://juarezjunior.medium.com/oracle-blockchain-cloud-service-invoke-chaincode-by-means-of-obcs-rest-apis-1f30127ed8c4)
       - [Oracle Blockchain Cloud Service — Invoke Chaincode from a Visual Builder Cloud Service application, Part 1 — Connecting VBCS to Oracle Blockchain](https://juarezjunior.medium.com/oracle-blockchain-cloud-service-invoke-chaincode-from-a-visual-builder-cloud-service-application-8f222626cde3)
-      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 3: Getting Started with Oracle Machine Learning](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-3-getting-started-with-oracle-machine-1b72224b4112)
+      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 3 - Getting Started with Oracle Machine Learning](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-3-getting-started-with-oracle-machine-1b72224b4112)
 
       IoT
       - [Azure IoT Central — Quick hands-on guide](https://juarezjunior.medium.com/azure-iot-central-hands-on-guide-9fdec8e3cd08)
@@ -324,24 +325,26 @@ content:
     layout: text
     content: | # this will include new lines to allow paragraphs
       Developer Relations - Presentations and Customer Engagements      
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
-      - []()
+      - [DevRel - Sessionize](https://sessionize.com/juarezjunior)
+      - [DevRel - Presentations](https://www.slideshare.net/juarezjunior/presentations)
+      - [DevRel - Photos](https://www.flickr.com/photos/15201803@N00/page1)       
+      - [DevOps Institute - SKILup Days 2023 - How Java Developers can Multicloud using Microsoft Azure and Oracle Cloud Infrastructure](https://www.devopsinstitute.com/skilupdays-cicd-apr-2023/)
+      - [jPrime.io 2023 - Bulgaria - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads](https://jprime.io/agenda/162)
+      - [jPrime.io 2023 - Bulgaria - Java Microservices with Helidon, React, and the Oracle Container Engine for Kubernetes](https://jprime.io/agenda/178)
+      - [jPrime.io 2023 - Bulgaria](https://www.facebook.com/photo/?fbid=948042613119219)
+      - [JCON OpenBlend 2023 - Slovenia - A High-Speed Data Ingestion Solution in Java Using MQTT, AMQP, and STOMP](https://slovenia.jcon.one/en/program/item/471-a-high-speed-data-ingestion-solution-in-java-using-mqtt-amqp-and-stomp)
+      - [DEVCONF.cz 2023 Czech Republic - Introduction to Kubernetes Operators for Databases](https://devconfcz2023.sched.com/event/1MYfI/introduction-to-kubernetes-operators-for-databases)
+      - [CodeFrenzy 2023 - Poland - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads](https://codefrenzy.pl/#agenda)
+      - [DevOpsDays Medellín 2023 - Colombia - Guía práctica para implementar canalizaciones de DevOps con IaC para sus aplicaciones sin servidor - es-ES](https://devopsdays.io/ponentes-2023-1)
+      - [DeveloperWeek Europe 2023 - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads](https://developerweekeurope2023.sched.com/event/1KJWh/revolutionize-java-database-app-development-with-reactive-streams-and-virtual-threads?iframe=no)
+      - [TDC Innovation 2023 - Brazil - Revolutionize Java Database App Development with Reactive Streams and Java Virtual Threads](https://thedevconf.com/tdc/2023/connections/trilha-arquitetura-java)
+      - [TDC Innovation 2023 - Brazil - Uma solução de ingestão de dados de alta velocidade em Java usando MQTT, AMQP e STOMP - pt-BR](https://thedevconf.com/tdc/2023/connections/trilha-microservices-ii)
+      - [TDC Innovation 2023 - Brazil - What I learned from working for Big Tech companies](https://thedevconf.com/tdc/2023/connections/trilha-carreira-e-mentoria)
+      - [Cloudland 2023 - Germany - Revolutionize Java DB App Dev with Reactive Streams and Java Virtual Threads](https://en.shop.doag.org/events/cloudland/2023/agenda/#eventDay.all)
+      - [Cloudland 2023 - Germany - A High-Speed Data Ingestion Solution in Java Using MQTT, AMQP, and STOMP](https://en.shop.doag.org/events/cloudland/2023/agenda/#eventDay.all)
       - [Azure User Group Sweden - Multi-cloud Application Development with Microsoft Azure and Oracle Cloud Infrastructure](https://twitter.com/AzugSweden/status/1632360722284806148)
+      - [Global Azure 2023 - Multi-cloud App Dev for Java Developers with Microsoft Azure and Oracle Cloud Infrastructure](https://globalazure.net/sessions/481687)
+      - [SPOUG Academy - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads](https://community.spoug.es/events/revolutionize-java-database-app-development-with-reactive-streams-and-virtual-threads)
       - [Tech Day Pakistan 2023](http://techdaypakistan.com/Speakers.html)
       - [DWX 23 Germany - Revolutionize Java Database App Development with Reactive Streams and Java Virtual Threads](https://www.developer-week.de/history/programm-2023/#/talk/revolutionize-java-database-app-development-with-reactive-streams-and-java-virtual-threads)
       - [DWX 23 Germany - A High-Speed Data Ingestion Solution in Java Using MQTT, AMQP, and STOMP](https://www.developer-week.de/history/programm-2023/#/talk/a-high-speed-data-ingestion-solution-in-java-using-mqtt-amqp-and-stomp)
@@ -349,11 +352,10 @@ content:
       - [SOUG.ch Day Winterthur 2023 - Multi-cloud AppDev for Java Developers with Microsoft Azure and Oracle Cloud Infrastructure](https://soug.ch/wp-content/uploads/2023/03/Stream-1-1.pdf)
       - [Cloud Lunch and Learn - Multi-cloud Application Development with Microsoft Azure and Oracle Cloud Infrastructure](https://www.youtube.com/watch?v=ShHfQNLTsPQ)
       - [Java Devs ‘23](https://twitter.com/oracleace/status/1625495083759067136)
+      - [DevOpsDays Kraków - Introduction to Kubernetes Operators for Databases](https://radio17.pl/news/devopsdays-krakow-nadciaga)
       - [SBA Research - Cybersecurity Panel - Secure Software Design, Security Automation, Cloud Security](https://www.sba-research.org/events/remote-breakout-session-secure-software-design-security-automation-cloud-security/)
+      - [JSNation.com - Azure Static Web Apps (SWA) with Azure DevOps](https://www.devopsjsconf.com/workshops-3h)
       - [JSNation.com - Workshops](https://live.jsnation.com/workshops)
-      - [DevRel - Sessionize](https://sessionize.com/juarezjunior)
-      - [DevRel - Presentations](https://www.slideshare.net/juarezjunior/presentations)
-      - [DevRel - Photos](https://www.flickr.com/photos/15201803@N00/page1) 
       - [Mêlée Numérique 2022 - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads](https://lameleeexternal.app.swapcard.com/event/melee-numerique-2022/planning/UGxhbm5pbmdfMTAwMzI2Ng)
       - [Mêlée Numérique 2022 - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads](https://www.youtube.com/watch?v=XX631Ax2o7E)
       - [Cloud Talks - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads - pt-BR](https://www.cloudconferenceday.com/cloudtalks)
@@ -370,10 +372,10 @@ content:
       - [Microsoft Ignite 2021 - Get to know the dev communities and partners in Ireland](https://learn.microsoft.com/en-us/events/ignite-nov-2021/general/connection-zone/conlc113/)
       - [Microsoft Ignite 2021 - Get to know the dev communities and partners in Ireland - YT](https://www.youtube.com/watch?v=r7wmz4-RXM0)            
       - [Blockchain on Azure for Developers](https://mktoevents.com/Microsoft+Event/272492/157-GQE-382)             
-      - [Microsoft Webinar: Machine Learning at scale with Microsoft and Kainos](https://mktoevents.com/Microsoft+Event/304788/157-GQE-382)
-      - [Microsoft Webinar: Cybersecurity Day with Microsoft and Avanade](https://mktoevents.com/Microsoft+Event/308598/157-GQE-382)
-      - [Test.js Summit - Talk: Microsoft Loves Javascript](https://twitter.com/TestJSSummit/status/1459308792785608707)
-      - [Test.js Summit - Workshop: Static Web Apps demo – CICD, Deployment and Test Pipeline on Azure - hands-on lab](https://portal.gitnation.org/contents/static-web-apps-demo-cicd-deployment-and-test-pipeline-on-azure)
+      - [Microsoft Webinar - Machine Learning at scale with Microsoft and Kainos](https://mktoevents.com/Microsoft+Event/304788/157-GQE-382)
+      - [Microsoft Webinar - Cybersecurity Day with Microsoft and Avanade](https://mktoevents.com/Microsoft+Event/308598/157-GQE-382)
+      - [Test.js Summit - Talk - Microsoft Loves Javascript](https://twitter.com/TestJSSummit/status/1459308792785608707)
+      - [Test.js Summit - Workshop - Static Web Apps demo – CICD, Deployment and Test Pipeline on Azure - hands-on lab](https://portal.gitnation.org/contents/static-web-apps-demo-cicd-deployment-and-test-pipeline-on-azure)
       - [Microsoft TechX - Enterprise Blockchain Application Development using Azure Blockchain Service](https://www.microsoftevents.com/profile/web/index.cfm?PKwebID=0x1462051d571&varPage=agenda)
       - [Microsoft TechX - Highlights by Version 1](https://www.version1.com/nw-cld-maz-highlights-from-microsoft-techx-dublin/)
       - [Microsoft TechX - Event Report by Version 1](https://medium.com/version-1/a-day-at-microsoft-techx-dublin-28a7abb71c9c)
@@ -386,7 +388,7 @@ content:
       - [Blockchain Solution Architecture for retraced.co](https://www.linkedin.com/feed/update/urn:li:activity:6512212464250167296/)    
       - [Microsoft Developers @ NodeConf Remote 2020](https://www.nearform.com/blog/microsoft-loves-nodeconf-remote-2020/)
       - [React Summit Remote Edition 2021](https://twitter.com/ReactSummit/status/1383052138365001734)
-      - [Open Source Lisbon - The Trinity in Exponential Technologies: Open Source, Blockchain and Microsoft Azure](https://www.youtube.com/watch?v=CmKYDAO2DMQ&t=26s)
+      - [Open Source Lisbon - The Trinity in Exponential Technologies - Open Source, Blockchain and Microsoft Azure](https://www.youtube.com/watch?v=CmKYDAO2DMQ&t=26s)
       - [Cloud Conference Day - Blockchain for Java Developers](https://www.youtube.com/watch?v=4Bj4XZqOI0k)
       - [Cloud Conference Day - Introduction to Azure Spring Cloud](https://www.linkedin.com/feed/update/urn:li:activity:6783021199669637120/)
       - [Azure Thursdays - Azure Block Chain Service for Developers](https://www.youtube.com/watch?v=9JsNx_4n11U)    
