--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ about_content: | # this will include new lines to allow paragraphs
    
   Previously, an Azure Developer Relations Lead at Microsoft, a Principal Developer Advocate - Blockchain at Oracle, and a Thought Leader and Technical Evangelist at IBM.
    
-  I have 27 years of professional experience in Software Engineering and Developer Relations, mainly as a Software Architect, Software Engineer, and Developer Advocate.
+  I have over 28 years of professional experience in Software Engineering and Developer Relations, mainly as a Software Architect, Software Engineer, and Developer Advocate.
    
   I focus on developing new code samples, hands-on labs (Oracle LiveLabs), workshops, demos, content (blog posts, videos) highlighting developer tooling and various Java-related and Open-Source projects, and participation in technical conferences and meetups.
   
