--- a/_config.yml
+++ b/_config.yml
@@ -446,7 +446,7 @@ content:
       - layout: left
         title: Oracle
         link: developer.oracle.com        
-        sub_title: Senior Principal Java Developer Evangelist
+        sub_title: Sr. Principal Java Developer Evangelist, Director of Developer Evangelism
         caption: August 2022 - Present
         quote: >
           https://www.oracle.com/
@@ -459,7 +459,7 @@ content:
       - layout: left
         title: Microsoft
         link: developer.microsoft.com        
-        sub_title: Azure Developer Relations Lead
+        sub_title: Azure Developer Relations Lead – Director of Developer Relations
         caption: July 2019 - August 2022
         quote: >
           https://microsoft.com/en-ie/
@@ -472,7 +472,7 @@ content:
       - layout: left
         title: Oracle
         link: www.oracle.com        
-        sub_title: Principal Developer Advocate, Product Strategy & Developer Advocacy Director - Oracle EMEA
+        sub_title: Principal Developer Advocate, Developer Advocacy Director - Oracle EMEA
         caption: May 2019 - July 2019
         quote: >
           https://developer.oracle.com/
